# astrostudy

./: .env.example  .gitignore  AstroStudy Análise Preditiva.md  README.md  pyproject.toml  requirements.txt
config/: config.yaml
dashboard/: app.py
data/processed/: asteroids_features.csv
models/trained/: baseline_model.joblib  optimized_baseline.joblib
notebooks/: deep_investigation.py  exploratory_analysis.py
pipelines/: run_baseline_training.py  run_full_pipeline.py  run_ingestion.py  run_processing.py
scratch/: inference_demo.py
src/astrostudy/features/: engineer.py
src/astrostudy/ingestion/: nasa_client.py  saver.py  validators.py
src/astrostudy/modeling/: predict.py  train.py
src/astrostudy/processing/: cleaner.py  transformer.py
src/astrostudy/utils/: config_loader.py  logger.py
